<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item

        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item

        android:id="@+id/action_new"
        android:title="@string/menu_empfaenger_neu"
        android:orderInCategory="120"
        app:showAsAction="never" />

    <item

        android:id="@+id/action_change"
        android:title="@string/menu_empfaenger_change"
        android:orderInCategory="140"
        app:showAsAction="never" />

    <item

        android:id="@+id/action_delete"
        android:title="@string/menu_empfaenger_delete"
        android:orderInCategory="160"
        app:showAsAction="never" />

</menu>