<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_new_receiver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background"
            android:fillViewport="true"
            tools:context="de.cokuss.chhe.pinmoney.NewRecipientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/background"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/empfaenger_neu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/empfaenger_neu"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_name"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/empfaenger_vorname"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/insertReciver" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_birthday"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/empfaenger_neu_geb_dat"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/input_birthday"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/sampleDate"
                android:inputType="date"
                android:labelFor="@+id/title_birthday" />
            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/birthdayButton"
                android:background="@drawable/button_calendar"/>
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:id="@+id/turnus">

            <RadioButton
                android:id="@+id/radioButton_dayli"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/daily" />

            <RadioButton
                android:id="@+id/radioButton_weekly"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly" />

            <RadioButton
                android:id="@+id/radioButton_monthly"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:text="@string/monthly" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_count"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/tg_betrag"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/betrag"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="2dp"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/euro"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:text="@string/euro"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_money_start"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/start_count"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/startBetrag"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginEnd="2dp"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/euro1"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:text="@string/euro"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_startDate"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/start_date"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/input_startDate"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginEnd="25dp"
                android:hint="@string/abNun"
                android:inputType="date" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/startButton"
                android:background="@drawable/button_calendar"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_save_new_child"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25pt"
            android:background="@drawable/button_save"
            android:enabled="true" />

    </LinearLayout>
</ScrollView>

