<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="54">
    <TextView
        android:id="@+id/iHiAccountName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="13"
        android:maxLines="1"
        android:background="#f0f"
        android:layout_marginRight="@dimen/history_padding"
        android:textAlignment="textStart"
        android:text="@string/empfaenger"/>

    <TextView
        android:id="@+id/iHiEntryDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:maxLines="1"
        android:background="#ff0"
        android:textAlignment="textStart"
        android:layout_marginRight="@dimen/history_padding"
        android:text="@string/datum" />

    <TextView
        android:id="@+id/iHiAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:maxLines="1"
        android:background="#f0f"
        android:textAlignment="textStart"
        android:layout_marginRight="@dimen/history_padding"
        android:text="@string/action_settings" />

    <TextView
        android:id="@+id/iHiStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:maxLines="1"
        android:background="#ff0"
        android:textAlignment="textStart"
        android:layout_marginRight="@dimen/history_padding"
        android:text="@string/datum" />

    <TextView
        android:id="@+id/iHiCycle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="#f0f"
        android:textAlignment="textStart"
        android:layout_marginRight="@dimen/history_padding"
        android:text="@string/turnus" />

    <TextView
        android:id="@+id/iHiValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:background="#ff0"
        android:textAlignment="textEnd"
        android:text="@string/value" />
</LinearLayout>