<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_einzahlen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/background"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="0dp"
                tools:context="de.cokuss.chhe.pinmoney.activity.BuchenActivity">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:text="@string/einzahlung_auf" />

    <TextView
        android:id="@+id/kontoname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/empfaenger"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textStyle="normal|bold"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/stand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kontoname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/kontostandTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/kontostand" />

        <TextView
            android:id="@+id/kontostand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="#000000"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:ems="5" />

    </RelativeLayout>

    <TextView
        android:id="@+id/betragText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stand"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:labelFor="@+id/betrag"
        android:text="@string/betrag" />

    <EditText
        android:id="@+id/betrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/betragText"
        android:layout_centerHorizontal="true"
        android:ems="4"
        android:inputType="numberDecimal"
        android:hint="@string/einzahlung_hint"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/vTextBuchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@+id/betrag"
        android:layout_centerHorizontal="true"
        android:labelFor="@+id/eTextBuchen"
        android:text="@string/optional" />

    <EditText
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/button_booking"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/button" />




</RelativeLayout>