<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15px"
            android:text="Vorname:"
            android:textSize="16dp"
            android:id="@+id/title_name" />

        <ExpandableListView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/expandableListView"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="100pt"
        android:layout_height="20pt"
        android:layout_marginTop="30pt"
        android:text="@string/button_konto"
        android:id="@+id/button_konto"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="100pt"
        android:layout_height="20pt"
        android:layout_marginTop="20pt"
        android:text="@string/button_auszahlung"
        android:id="@+id/button_auszahlung"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="100pt"
        android:layout_height="20pt"
        android:layout_marginTop="20pt"
        android:text="@string/button_einzahlung"
        android:id="@+id/button_einzahlung"
        android:layout_gravity="center_horizontal" />
</LinearLayout>