<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pin_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/background"
    tools:context="de.cokuss.chhe.pinmoney.ChangePinInfoActivity">
    <TextView
        android:text="@string/PinMoney4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/PinMoneyHeader"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/inhaber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wird noch festgelegt"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/PinMoneyHeader"
        android:textSize="16sp"
        android:textStyle="normal|bold"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorAccent"/>





    <RadioGroup
        android:id="@+id/cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inhaber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/view_vertical_margin">

        <RadioButton
            android:id="@+id/rbDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"/>

        <RadioButton
            android:text="@string/weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbWeek"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbMonth"
            android:layout_weight="1"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cycle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:id="@+id/linearLayout">

        <TextView
            android:text="@string/betrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/betragTextEdit"
            android:labelFor="@+id/betragEdit"
            android:textColor="@color/colorAccent"
            android:textStyle="normal|bold"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/betragEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:hint="0.00"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="280dp"
        android:layout_marginStart="35dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_changeDate"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:text="@string/change_date"
            android:textColor="@color/colorAccent"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/input_chengeDate"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:hint="Datum"
            android:textAlignment="center"
            android:inputType="date" />

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/changeStartButton"
            android:background="@drawable/button_calendar"/>

    </LinearLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/button_change"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:id="@+id/variButton"/>


</RelativeLayout>
