<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_actual_count"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:text="@string/title_actual_count"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/show_actual_count"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/euro"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:text="@string/euro"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.12"

            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:text="" />

            <TextView
                android:id="@+id/title_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/days_10"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioButton_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="" />

            <TextView
                android:id="@+id/title_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/days_30"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioButton_60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="" />

            <TextView
                android:id="@+id/title_60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/days_60"
                android:textSize="14sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp" />

    </LinearLayout>


</ScrollView>
